--- a/.babelrc
+++ b/.babelrc
@@ -1,21 +1,47 @@
 {
-  "comments": false,
+  // "comments": false,
   "env": {
     "main": {
       "presets": [
-       "@babel/preset-env",
+        ["@babel/preset-env",
+          {
+            // "modules": false,
+            "useBuiltIns": "usage",
+            "corejs": 2
+          }
+        ]
       ]
     },
     "renderer": {
       "presets": [
-        "@babel/preset-env"
+        ["@babel/preset-env",
+          {
+            // "modules": false,
+            "useBuiltIns": "usage",
+            "corejs": 2
+          }
+        ]
       ]
     },
     "web": {
       "presets": [
-        "@babel/preset-env"
+        ["@babel/preset-env",
+          {
+            // "modules": false,
+            "useBuiltIns": "usage",
+            "corejs": 2
+          }
+        ]
       ]
     }
   },
-  "plugins": ["@babel/plugin-transform-runtime"]
+  // "@babel/plugin-syntax-dynamic-import", 
+  "plugins": ["@babel/plugin-syntax-dynamic-import",["@babel/plugin-transform-runtime",{
+    // "useESModules": true
+        // "absoluteRuntime": false,
+        // "corejs": false,
+        // "helpers": true,
+        // "regenerator": true,
+        // "useESModules": false
+  }]]
 }
