--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "core-js": "^2.6.9",
     "vue": "^2.6.10",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.6",
@@ -30,10 +31,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
-    "ajv": "^6.10.0",
     "babel-loader": "^8.0.6",
+    "ajv": "^6.10.0",
     "babili-webpack-plugin": "^0.1.2",
     "cfonts": "^2.4.3",
     "chalk": "^2.4.2",
